--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>PreEntrega 1</title>
 </head>
 <body>
-    <h1>Martín Román Dana - PreEntrega 1 </h1>
-    
+    <h1> Martín Román Dana - PreEntrega 1 - Fruetria </h1>  
 </body>
 </html>
