--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--<link rel="stylesheet" href="./css/style.css"> --> 
     <!-- JS -->
-     <script defer src="./js/main.js"></script>
-    <title>PreEntrega 1</title>
+    <script defer src="./js/main.js"></script>
+    <title>PreEntrega 2</title>
 </head>
 <body>
-    <h1> Martín Román Dana - PreEntrega 1 - Fruetria </h1>  
+    <h1> Martín Román Dana </h1> 
+    <h2> PreEntrega 1 - Fruetria </h2> 
+    <div id="contenedor-productos"></div>
+    <a href="carrito.html">Ir al Carrito</a>
 </body>
 </html>
