--- a/carrito.html
+++ b/carrito.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">  
     <!-- JS -->     
-    <script defer src="js/carrito.js"></script>
+    <script defer src="./js/carrito.js"></script>
     <title>Frutería - Carrito</title>  
 </head>
 <body>
