segunda entrega arreglada

--- a/carrito.html
+++ b/carrito.html
@@ -9,9 +9,13 @@
     <title>Frutería - Carrito</title>  
 </head>
 <body>
-    <h1>Carrito de Compras</h1>
-    <div id="contenedor-carrito"></div>
-    <p id="total-compra"></p>
-    <a href="index.html">Volver a Productos</a>
+    <header>
+        <h1>Carrito de Compras</h1>
+    </header>
+    <div>
+        <div id="contenedor-carrito"></div>
+        <p id="total-compra"></p>
+        <a href="index.html">Volver a Productos</a>
+    </div>  
 </body>
 </html>
