--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <title>PreEntrega 2</title>
 </head>
 <body>
-    <h1> Martín Román Dana </h1> 
-    <h2> PreEntrega 2 - Fruteria </h2> 
-    <div id="contenedor-productos"></div>
-    <a href="carrito.html">Ir al Carrito</a>
+    <header>
+        <h1> Martín Román Dana </h1> 
+        <h2> PreEntrega 2 - Fruteria </h2> 
+    </header>
+    <div>
+        <div id="contenedor-productos"></div>
+        <a href="carrito.html">Ir al Carrito</a>
+    </div>  
 </body>
 </html>
