--- a/carrito.html
+++ b/carrito.html
@@ -15,6 +15,8 @@
     <div>
         <div id="contenedor-carrito"></div>
         <p id="total-compra"></p>
+        <button id="finalizar-compra">Finalizar la compra</button>
+        <p id="mensaje-compra"></p>
         <a href="index.html">Volver a Productos</a>
     </div>  
 </body>
