termine el trabajo

--- a/carrito.html
+++ b/carrito.html
@@ -18,6 +18,8 @@
         <button id="finalizar-compra">Finalizar la compra</button>
         <p id="mensaje-compra"></p>
         <a href="index.html">Volver a Productos</a>
-    </div>  
+    </div> 
+    <!-- Sweetalert --> 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> 
 </body>
 </html>
