--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css"> 
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- JS -->
     <script defer src="./js/main.js"></script>
     <title>PreEntrega 2</title>
@@ -11,11 +13,13 @@
 <body>
     <header>
         <h1> Martín Román Dana </h1> 
-        <h2> PreEntrega 2 - Fruteria </h2> 
+        <h2> EntregaFinal - Fruteria </h2> 
     </header>
     <div>
-        <div id="contenedor-productos"></div>
+        <section id="contenedor-productos"></section>
         <a href="carrito.html">Ir al Carrito</a>
-    </div>  
+    </div> 
+    <!-- Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
